[Feat] Complete swagger docs
